@@ -1,9 +1,9 @@
 package com.ispengya.shortlink.admin.common.util;
 
 import com.alibaba.excel.EasyExcel;
-import jakarta.servlet.http.HttpServletResponse;
 import lombok.SneakyThrows;
 
+import javax.servlet.http.HttpServletResponse;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
@@ -25,7 +25,7 @@ public class EasyExcelWebUtil {
     public static void write(HttpServletResponse response, String fileName, Class<?> clazz, List<?> data) {
         response.setContentType("application/vnd.openxmlformats-officedocument.spreadsheetml.sheet");
         response.setCharacterEncoding("utf-8");
-        fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8).replaceAll("\\+", "%20");
+        fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8.name()).replaceAll("\\+", "%20");
         response.setHeader("Content-disposition", "attachment;filename*=utf-8''" + fileName + ".xlsx");
         EasyExcel.write(response.getOutputStream(), clazz).sheet("Sheet").doWrite(data);
     }
